2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Install texhash.exe as copy of mktexlsr.exe.

2012-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace P_WAIT by _P_WAIT.

2012-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Define WEB2C_KPSE_VERSION.
	* mktexpk.c, mktextfm.c: Drop WINWEB2CVERSION, WINKPSEVERSION,
	use WEB2C_KPSE_VERSION with versions from configure.

2011-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil.c: Add parens around assignment used as truth value.

2011-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil.c: Return zero or one (Errorcnt could be 256).

2011-08-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* fmtutil.c: return a nonzero value if it fails to make a format.

2011-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getdestdir.c, mktexmf.c, mktexpk.c, mktextfm.c, mktexupd.c,
	mktexupdmain.c: No need to #include any standard headers, they
	all come through <kpathsea/kpathsea.h>.
	* getdestdir.c, mktexpk.c, mktextfm.c: Use IS_KANJI().

	* dirutil.[ch]: New files extracted ...
	* getdestdir.[ch]: ... from here.

	* fmtutil.c, mktexfmt.c, mktexlsr.c: More new files from W32TeX.
	Drop use of getlongname() for 8+3 names.  Constify strings.
	No need to #include any standard headers.
	Declare functions as static. Drop unused variables.
	Add parentheses around assignment used as truth value.

	* fmtutil.c: Declare the array index Exenum as unsigned char.
	(is_dir, make_dir, make_dir_p): Removed, use dirutil.c.

	* mktexlsr.c: For MinGW #include "dirutil.h" and use is_dir(),
	for native WIN32 #include <kpathsea/dirent.h> and use d_isdir.
	(search): No need to slashify name.  Remove return at end.

2011-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getdestdir.c, mktexmf.c, mktexpk.c, mktextfm.c, mktexupd.c,
	mktexupdmain.c: New files from Akira's W32TeX.

	* getdestdir.c (getdestdir): Replace kstrrchr() by strrchr().
